CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(EULER-OPERATION)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Options: Debug Release RelWithDebInfo MinSizeRel." FORCE)
ENDIF()

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_CXX_STANDARD 17)

ADD_DEFINITIONS(-D_SILENCE_CXX17_OLD_ALLOCATOR_MEMBERS_DEPRECATION_WARNING)
ADD_DEFINITIONS(-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_UNICODE)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -pthread")
    SET(STDFS_LD_LIB "c++fs")
    SET(CMAKE_EXE_LINKER_FLAGS "-ldl")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
    SET(STDFS_LD_LIB "stdc++fs")
    SET(CMAKE_EXE_LINKER_FLAGS "-ldl")
    MESSAGE(WARNING "g++ configuration is untested")
ENDIF()

ADD_SUBDIRECTORY(Lib/agz-utils)
ADD_SUBDIRECTORY(Lib/ImGui)
ADD_SUBDIRECTORY(Lib/poly2tri)
ADD_SUBDIRECTORY(Src/D3D)
ADD_SUBDIRECTORY(Src/Euler)

SET_TARGET_PROPERTIES(AGZUtils ImGui poly2tri PROPERTIES FOLDER "ThirdParty")
