CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(IMGUI)

SET(TargetName ImGui)

FILE(GLOB_RECURSE TARGET_SRC
		"${PROJECT_SOURCE_DIR}/Src/*.cpp"
		"${PROJECT_SOURCE_DIR}/Src/*.h"
		"${PROJECT_SOURCE_DIR}/Include/*.h"
		"${PROJECT_SOURCE_DIR}/Include/*.inl")
ADD_LIBRARY(${TargetName} STATIC ${TARGET_SRC})

FOREACH(_SRC IN ITEMS ${TARGET_SRC})
    GET_FILENAME_COMPONENT(TARGET_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/Include/${TargetName}" "Include" _GRP_PATH "${TARGET_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/Src" "Src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET(${TargetName}_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/Include" CACHE STRING "")
SET(${TargetName}_LIBRARIES ${TargetName} d3d11.lib dxgi.lib d3dcompiler.lib dxguid.lib CACHE STRING "")

TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${PROJECT_SOURCE_DIR}/Include")
