CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(POLY2TRI)

SET(TargetName poly2tri)

FILE(GLOB_RECURSE TARGET_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cc"
		"${PROJECT_SOURCE_DIR}/src/*.h")
ADD_LIBRARY(${TargetName} STATIC ${TARGET_SRC})

FOREACH(_SRC IN ITEMS ${TARGET_SRC})
    GET_FILENAME_COMPONENT(TARGET_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src/poly2tri" "src" _GRP_PATH "${TARGET_SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET(${TargetName}_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src" CACHE STRING "")
SET(${TargetName}_LIBRARIES ${TargetName} CACHE STRING "")

TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${PROJECT_SOURCE_DIR}/src")
