PROJECT(MAIN)

SET(TargetName EulerOperation)

FILE(GLOB_RECURSE SRC
        "${PROJECT_SOURCE_DIR}/Src/*.cpp"
        "${PROJECT_SOURCE_DIR}/Include/*.h")
ADD_EXECUTABLE(${TargetName} ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/Include/EulerOperation" "Include" _GRP_PATH "${SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/Src" "Src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET ${TargetName} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/../../")

TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${D3D_INCLUDE_DIRS}")
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${poly2tri_INCLUDE_DIRS}")
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${PROJECT_SOURCE_DIR}/Include")
TARGET_INCLUDE_DIRECTORIES(${TargetName} PRIVATE "${AGZUtils_INCLUDE_DIRS}")

TARGET_LINK_LIBRARIES(${TargetName} AGZUtils ${D3D_LIBRARIES} ${poly2tri_LIBRARIES})
